# nako-eye

./: .gitignore  README.md  environment.yaml  explore_dataset.ipynb  explore_measurements.ipynb  pyproject.toml
classification/: eval.ipynb  eval.py  train.py  validate.py
example_scripts/: training_example.sh
models/: models.py
mplstyles/: paper.mplstyle  poster.mplstyle  slide.mplstyle
notebooks/: eval_classification.ipynb  eval_regression.ipynb  eval_regression_multitask.ipynb  explore_dataset.ipynb  explore_measurements.ipynb  quality_grading.ipynb  quality_grading_ukb.ipynb  quality_human_grading.ipynb  quality_shift.ipynb
preprocess/: quality_grading.ipynb  quality_grading.py  quality_grading_retiratey.py  quality_grading_ukb.ipynb  validate_images.py
regression/: eval.ipynb  eval.py  train.py  validate.py
regression_multitask/: eval.ipynb  eval.py  train.py  validate.py
scripts/classification/: training_example.sh
src/nako_eye/classification/: eval.py  train.py  validate.py
src/nako_eye/preprocess/: center_crop.py  quality_embeddings.py  quality_grading.py  quality_grading_retiratey.py  validate_images.py
src/nako_eye/regression/: eval.py  train.py  validate.py
src/nako_eye/regression_multitask/: eval.py  train.py  validate.py
src/nako_eye/utils/: helpers.py  nako.py  plot.py
utils/: helpers.py  nako.py  plot.py
